Desarrollo de pruebas unitarias con IA y envio de reporte a SonarQube con covertura del 88%